# thor_mang_vigir_integration

./: README.md
thor_mang_control_mode_switcher/: CMakeLists.txt  package.xml
thor_mang_control_mode_switcher/config/: atlas_active_controllers_by_control_mode.yaml  control_modes.yaml  control_modes.yaml~  control_modes_robot.yaml  control_modes_simulation.yaml  dummy_config.yaml
thor_mang_control_mode_switcher/include/thor_mang_control_mode_switcher/: thor_mang_control_mode_switcher.h  trajectory_control_helper.h
thor_mang_control_mode_switcher/launch/: control_mode_switcher.launch  control_mode_switcher.launch~  control_mode_switcher_robot.launch  control_mode_switcher_simulation.launch  control_mode_switcher_simulation.launch~
thor_mang_control_mode_switcher/src/: thor_mang_control_mode_switcher.cpp  thor_mang_control_mode_switcher_node.cpp  trajectory_control_helper.cpp
thor_mang_fake_joint_states/: CMakeLists.txt  package.xml  setup.py
thor_mang_fake_joint_states/launch/: behavior_onboard.launch
thor_mang_fake_joint_states/src/thor_mang_fake_joint_states/: thor_mang_fake_joint_states.py
thor_mang_logger/: CMakeLists.txt  package.xml  setup.py
thor_mang_logger/config/: default_topics.yaml
thor_mang_logger/launch/: default_logger.launch
thor_mang_logger/src/thor_mang_logger/: thor_mang_logger.py
